fix: Customized Default Scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,8 +19,30 @@ body {
   background-color: #000;
 }
 
+::-webkit-scrollbar {
+  width: 0.3rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #00000030;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1da1f2;
+  border-radius: 100px;
+}
+
 body::-webkit-scrollbar {
-  display: none;
+  width: 0.3rem;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #00000030;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #1da1f2;
+  border-radius: 100px;
 }
 
 body {
